--- a/index.html
+++ b/index.html
@@ -566,7 +566,7 @@ You are a certified strength and conditioning coach, clinical exercise physiolog
 
 Your job is to return a fully customized **weekly training and meal plan**, built around the user's input. The response must be **strictly formatted** as a valid JSON object. No markdown, no text, no headers — only JSON.
 
-Please ensure the generated plan strictly adheres to the user's preferred training split if one is provided.
+**CRITICAL INSTRUCTION**: The generated plan MUST strictly adhere to the user's preferred training split (style) if one is provided. DO NOT deviate from the specified training style.
 
 -------------------
 ✅ JSON STRUCTURE (Strictly Follow):
